--- a/sections/certifications.html
+++ b/sections/certifications.html
@@ -5,7 +5,7 @@
         <ul class="certifications-list">
             <li><a href="https://drive.google.com/file/d/12FxSWwpX_jQzLk_Q1askTcR80HsJ4kgj/view?usp=sharing">Certificate of completion in Data Structures in C++</a></li>
             <li><a href="https://drive.google.com/file/d/1w05CzaLtsz8Ltfi1fo7r_7QyIW6TOJWE/view?usp=sharing">Certificate of excellence in Data Structures in C++</a></li>
-            <li><a href="#">Basics of Machine Learning by Great Learning</a></li>
+            <li><a href="https://drive.google.com/file/d/1aXCQ8F0OkuHtSxxHGqi9BYhch88Oexsx/view?usp=drivesdk">Basics of Machine Learning by Great Learning</a></li>
             <li><a href="https://drive.google.com/file/d/1aIL0-lgqiFGQ_KN0CZ4KMOKb3PgH9kIv/view?usp=drivesdk">Introduction to Ethical Hacking by Great Learning</a></li>
             <li><a href="https://drive.google.com/file/d/1iEdClICSTOJ1QT_0VxZ1Zo11lNCg1UuG/view?usp=sharing">Internship certification in Web Development by Acmegrade</a></li>
         </ul>
